tests/ui/recursion_limit/invalid_digit_type.rs
#![recursion_limit = 123] //~ ERROR malformed `recursion_limit` attribute

fn main() {}
